# sdl2wrap

./: .clang-tidy  .gitignore  CMakeLists.txt  README.md  features.md
.github/workflows/: build.yml
cmake/: FindSDL2.cmake  FindSDL2_image.cmake  FindSDL2_mixer.cmake  FindSDL2_net.cmake  FindSDL2_ttf.cmake  funcEnableClangTidy.cmake  funcEnableStrictOptions.cmake
include/sdl2wrap/: assert.h  audio.h  blendmode.h  error.h  events.h  hints.h  keyboard.h  log.h  pixels.h  rect.h  render.h  rwops.h  sdl2.h  sdl2stl.h  surface.h  timer.h  version.h  video.h  window.h
include/sdl2wrap/detail/: base.h  generated_hints.h  result.h  typewrapper.h
include/sdl2wrap/detail/impl/: impl_assert.h  impl_audio.h  impl_blendmode.h  impl_error.h  impl_events.h  impl_hints.h  impl_log.h  impl_pixels.h  impl_rect.h  impl_render.h  impl_rwops.h  impl_sdl2.h  impl_surface.h  impl_timer.h  impl_version.h  impl_video.h
scripts/: buildFeaturelist.bash  defineParser.py  enumParser.py  featuresFromIntermediates.py  fullgen.bash  generateHints.py  generator.py  strops.py
src/examples/: CMakeLists.txt
src/examples/init/: init.cpp
src/examples/lint/: lint.cpp
src/examples/static/: dosomeotherthings.cpp  dosomethings.cpp  sharedheader.h  static.cpp
src/examples/testgame/: objects.h  shared.h  testgame.cpp  world.cpp  world.h
src/examples/video/: video.cpp
